@@ -3,7 +3,7 @@ Project site: http://code.google.com/p/valentine-hbl/
 Project forum: http://advancedpsp.tk/foro_es/viewtopic.php?f=21&t=190
 
 Original idea: n00b81
-Developers: m0skit0, ab5000, wololo
+Developers: m0skit0, ab5000, wololo, davee
 Contributors: n00b81, J, arisma, psp-hacks.com, ultimakillz
 Special thanks to: all people who worked on PSPSDK, specially Tyranid for psplink and prxtool, people at ps2dev.org, jas0nuk for prxdecrypter, 
 all psardumper developers.
